--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -35,7 +35,7 @@ env:
   ECR_REPOSITORY: 709825985650.dkr.ecr.us-east-1.amazonaws.com/liquibase          # set this to your Amazon ECR repository name
   # ECS_SERVICE: ${{ vars.MY_ECS_SERVICE }}                 # set this to your Amazon ECS service name
   ECS_CLUSTER: workshop-cluster                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: file://task_definition/task_def.json # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: task_def.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: Liquibase-Pro          # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
