--- a/liquibase.properties
+++ b/liquibase.properties
@@ -2,11 +2,11 @@ changelogFile: changelog.yaml
 # changelogFile: changelog.sql
 
 
-url: jdbc:postgresql://database-1-instance-1.cleuam4akp6j.us-west-2.rds.amazonaws.com:5432/postgres
+url: aws-secrets,liquibase-workshop-secrets,url
 # username: aws-secrets,rds!cluster-e4112c6e-08fe-4b32-a633-16dc71b0e7a4,username
 # password: aws-secrets,rds!cluster-e4112c6e-08fe-4b32-a633-16dc71b0e7a4,password
-username: postgres
-password: iU!P$286{7ievAP{IAOCpL>[C%4H
+username: aws-secrets,rds!cluster-e4112c6e-08fe-4b32-a633-16dc71b0e7a4,username
+password: aws-secrets,liquibase-workshop-secrets,url
 
 
 liquibase.reports.enabled: false
