--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -32,7 +32,7 @@ on:
 
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}                  # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: 442012004811.dkr.ecr.us-west-2.amazonaws.com/liquibase/sqlrepository          # set this to your Amazon ECR repository name
+  ECR_REPOSITORY: liquibase/sqlrepository          # set this to your Amazon ECR repository name
   # ECS_SERVICE: ${{ vars.MY_ECS_SERVICE }}                 # set this to your Amazon ECS service name
   ECS_CLUSTER: workshop-cluster                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: task-def.json # set this to the path to your Amazon ECS task definition
