--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -68,7 +68,7 @@ jobs:
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
       env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REGISTRY: 442012004811.dkr.ecr.us-west-2.amazonaws.com
         IMAGE_TAG: ${{ github.sha }}
       run: |
         # Build a docker container and
