--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -101,29 +101,36 @@ jobs:
         run-task-security-groups: sg-215c6345
         run-task-assign-public-IP: ENABLED
         run-task-container-overrides: |
-            [
-                {
-                    "name": "LIQUIBASE_COMMAND_USERNAME",
-                    "value": "${{ secrets.LIQUIBASE_COMMAND_USERNAME }}"
-                },
-                {
-                    "name": "LIQUIBASE_COMMAND_PASSWORD",
-                    "value": "${{ secrets.LIQUIBASE_COMMAND_PASSWORD }}"
-                },
-                {
-                    "name": "LIQUIBASE_COMMAND_URL",
-                    "value": "${{ secrets.LIQUIBASE_COMMAND_URL }}"
-                },
-                {
-                    "name": "LIQUIBASE_COMMAND_CHANGELOG_FILE",
-                    "value": "${{ vars.LIQUIBASE_COMMAND_CHANGELOG_FILE }}"
-                },
-                {
-                    "name": "AWS_REGION",
-                    "value": "us-west-2"
-                },
-                {
-                    "name": "INSTALL_MYSQL",
-                    "value": "false"
-                }
-            ]
+{
+  "containerOverrides": [
+    {
+      "name": "${{ CONTAINER_NAME }}",
+      "environment": [
+        {
+            "name": "LIQUIBASE_COMMAND_USERNAME",
+            "value": "${{ secrets.LIQUIBASE_COMMAND_USERNAME }}"
+        },
+        {
+            "name": "LIQUIBASE_COMMAND_PASSWORD",
+            "value": "${{ secrets.LIQUIBASE_COMMAND_PASSWORD }}"
+        },
+        {
+            "name": "LIQUIBASE_COMMAND_URL",
+            "value": "${{ secrets.LIQUIBASE_COMMAND_URL }}"
+        },
+        {
+            "name": "LIQUIBASE_COMMAND_CHANGELOG_FILE",
+            "value": "${{ vars.LIQUIBASE_COMMAND_CHANGELOG_FILE }}"
+        },
+        {
+            "name": "AWS_REGION",
+            "value": "us-west-2"
+        },
+        {
+            "name": "INSTALL_MYSQL",
+            "value": "false"
+        }
+      ]
+    }
+  ]
+}
