--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -41,10 +41,10 @@ env:
   CONTAINER_NAME: Liquibase-Pro # set this to the name of the container in the
   # containerDefinitions section of your task definition
   IMAGE_NAME: ${{ vars.IMAGE_NAME }}
-  # LIQUIBASE_COMMAND_CHANGELOG_FILE: ${{ vars.LIQUIBASE_COMMAND_CHANGELOG_FILE }}
-  # LIQUIBASE_COMMAND_URL: ${{ secrets.LIQUIBASE_COMMAND_URL }}
-  # LIQUIBASE_COMMAND_USERNAME: ${{ secrets.LIQUIBASE_COMMAND_USERNAME }}
-  # LIQUIBASE_COMMAND_PASSWORD: ${{ secrets.LIQUIBASE_COMMAND_PASSWORD }}
+  LIQUIBASE_COMMAND_CHANGELOG_FILE: ${{ vars.LIQUIBASE_COMMAND_CHANGELOG_FILE }}
+  LIQUIBASE_COMMAND_URL: ${{ vars.LIQUIBASE_COMMAND_URL }}
+  LIQUIBASE_COMMAND_USERNAME: ${{ vars.LIQUIBASE_COMMAND_USERNAME }}
+  LIQUIBASE_COMMAND_PASSWORD: ${{ vars.LIQUIBASE_COMMAND_PASSWORD }}
 
 permissions:
   contents: read
