--- a/liquibase.properties
+++ b/liquibase.properties
@@ -6,7 +6,7 @@ url: aws-secrets,liquibase-workshop-secrets,url
 # username: aws-secrets,rds!cluster-e4112c6e-08fe-4b32-a633-16dc71b0e7a4,username
 # password: aws-secrets,rds!cluster-e4112c6e-08fe-4b32-a633-16dc71b0e7a4,password
 username: aws-secrets,rds!cluster-e4112c6e-08fe-4b32-a633-16dc71b0e7a4,username
-password: aws-secrets,liquibase-workshop-secrets,url
+password: aws-secrets,rds!cluster-e4112c6e-08fe-4b32-a633-16dc71b0e7a4,password
 
 
 liquibase.reports.enabled: false
