--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -38,7 +38,7 @@ env:
   ECR_REPOSITORY: liquibase/sqlrepository # set this to your Amazon ECR repository name
   # ECS_SERVICE: ${{ vars.MY_ECS_SERVICE }}  # set this to your Amazon ECS service name
   ECS_CLUSTER: workshop-cluster  # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: task-def.json # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: task-def-sidecar.json # set this to the path to your Amazon ECS task definition
   # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: Liquibase-Pro # set this to the name of the container in the
   # containerDefinitions section of your task definition
