--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -54,7 +54,8 @@ permissions:
 jobs:
   deploy:
     name: Deploy
-    runs-on: ubuntu-latest
+    # runs-on: ubuntu-latest
+    runs-on: macos-latest
     environment: production
 
     steps:
