--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -76,7 +76,7 @@ jobs:
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
       env:
-        ECR_REGISTRY: 442012004811.dkr.ecr.us-west-2.amazonaws.com
+        ECR_REGISTRY: $AWS_ACCOUNT_NUMBER.dkr.ecr.us-west-2.amazonaws.com
         IMAGE_TAG: ${{ github.sha }}
       run: |
         # Build a docker container and
