--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -88,7 +88,7 @@ jobs:
 
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         
-        docker run -it 442012004811.dkr.ecr.us-west-2.amazonaws.com/liquibase/sqlrepository:latest sh -c "ls -alh /sqlrepository
+        docker run -it 442012004811.dkr.ecr.us-west-2.amazonaws.com/liquibase/sqlrepository:latest sh -c "ls -alh /sqlrepository"
         
         docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
